Fixed: Spacing between info parts

--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -103,6 +103,10 @@ main .information{
   align-items: center;
 }
 
+.info-part-1{
+  margin-bottom: 200px;
+}
+
 .information-text-1, .information-text-2{
   width: 50%;
 }
